cmake_minimum_required(VERSION 3.11.0 FATAL_ERROR)

project(multipart-parser C)

set(INSTALL_MULTIPART_PARSER_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib" CACHE PATH "Installation directory for libraries")
set(INSTALL_MULTIPART_PARSER_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH "Installation directory for headers")

set(MULTIPART_PARSER_LIBRARY multipart-parser)

set(MULTIPART_PARSER_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/multipart_parser.c
)

add_library(${MULTIPART_PARSER_LIBRARY} STATIC ${MULTIPART_PARSER_FILES})

set(MULTIPART_PARSER_PUBLIC_H ${CMAKE_CURRENT_SOURCE_DIR}/multipart_parser.h )

install(FILES ${MULTIPART_PARSER_PUBLIC_H} DESTINATION "${INSTALL_MULTIPART_PARSER_INCLUDE_DIR}")
install(TARGETS ${MULTIPART_PARSER_LIBRARY} DESTINATION "${INSTALL_MULTIPART_PARSER_LIB_DIR}")
